--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 
     <main>
       <!--PARALLAX-->
-      <section>
-        <div id="parallax-world-of-ugg">
+      <div id="parallax-world-of-ugg">
+        <section class="intro-text-section">
           <div class="title pb-4">
             <h3>We work online</h3>
             <h1>MAGIC</h1>
@@ -148,12 +148,10 @@
               </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="parallax-one px-4">
-        <div class="container">
-          <div class="">
+        <section class="parallax-one px-4 dictionary-section">
+          <div class="container">
             <h3 class="text-left text-light pb-2">
               Ether <span class="small lspace">\ ˈē-thər \ [GREEK]</span>
             </h3>
@@ -162,150 +160,55 @@
               universe above the terrestrial sphere
             </h3>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section>
-        <div class="m-0">
-          <div class="block">
-            <p>
-              <span class="first-character ny">Y</span>ou need a creative
-              partner who can deeply connect with you and understand your
-              vision. We help you tune into your own mystical powers and the
-              soul essence of your business so we can inject that beauty
-              throughout your web design.
-            </p>
+        <section class="services-section">
+          <div class="parallax-two mb-4">
+            <h2>What We Offer</h2>
           </div>
+          <div class="container p-0 pt-4">
+            <div class="row">
+              <div class="col-12 col-md-4 px-4 mb-4">
+                <h3 class="mb-3">Strategy</h3>
+                <p class="line-break m-0 w-100"></p>
+                <ul class="pl-2 pt-2">
+                  <li>Brand Archetypes</li>
+                  <li>Audience Personas</li>
+                  <li>Competitor Analysis</li>
+                  <li>Creative Direction</li>
+                </ul>
+              </div>
 
-          <!--SERVICES-->
-          <section class="contact-section bg-black mb-4">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-4 mb-3 mb-md-0">
-                  <div class="card px-4 h-100 text-center">
-                    <div class="card-icon">
-                      <svg
-                        width="125"
-                        height="117"
-                        viewBox="0 0 125 117"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M104.172 101.134C104.172 94.9638 107.221 84.2985 95.125 78.3059C103.719 70.4011 109.055 59.4031 109.055 47.2314C109.055 23.166 88.2109 3.65625 62.5 3.65625C36.7871 3.65625 15.9453 23.166 15.9453 47.2314C15.9453 59.4013 21.2793 70.3993 29.875 78.3077C17.7793 84.2985 20.832 94.9638 20.832 101.134C20.832 105.887 11.7188 104.115 11.7188 109.691C11.7188 113.947 17.9004 113.689 20.373 112.828C26.2109 110.79 29.8945 105.905 31.0723 104.344C32.0879 102.991 31.4805 102.766 31.9824 101.287C32.498 99.7681 35.6094 102.814 39.832 101.134C45.9766 98.6895 41.8848 94.0278 46.4316 94.0278C49.1855 94.0278 54.9922 96.1904 62.5039 96.1904C70.0117 96.1904 75.8203 94.0278 78.5762 94.0278C83.127 94.0278 79.0332 98.6895 85.1758 101.134C89.3984 102.814 92.5117 99.7681 93.0293 101.287C93.5293 102.766 92.918 102.991 93.9336 104.344C95.1094 105.905 98.7891 110.788 104.631 112.828C107.102 113.687 113.281 113.947 113.281 109.691C113.281 104.115 104.172 105.887 104.172 101.134ZM56.1406 42.1712C52.7422 42.1712 50.3262 45.9097 50.3262 50.0833C50.3262 45.9097 47.916 42.1712 44.5117 42.1712C47.9141 42.1712 50.3262 38.4345 50.3262 34.2591C50.3281 38.4345 52.7422 42.1712 56.1406 42.1712ZM39.8945 10.4075C39.8945 19.2977 45.0293 27.2482 52.2656 27.2482C45.0293 27.2482 39.8945 35.2042 39.8945 44.0944C39.8945 35.2042 34.7598 27.2482 27.5234 27.2482C34.7598 27.25 39.8945 19.2977 39.8945 10.4075ZM25.9746 50.0833C29.8945 50.0833 32.6758 45.7762 32.6758 40.9573C32.6758 45.7762 35.459 50.0833 39.3809 50.0833C35.459 50.0833 32.6758 54.3922 32.6758 59.2093C32.6738 54.3922 29.8945 50.0833 25.9746 50.0833ZM14.6035 111.146C10.0195 108.062 19.291 104.337 19.291 106.56C19.291 108.514 20.8047 106.154 23.709 106.154C28.6367 106.154 19.1934 114.229 14.6035 111.146ZM89.6992 91.3679C89.6992 91.3679 98.7598 95.3056 94.1777 100.538C93.1016 95.8669 89.1465 100.969 85.248 98.439C80.9746 95.6621 84.7637 89.7701 77.3027 91.7408C66.5332 94.5835 58.4688 94.5835 47.7051 91.7408C40.2441 89.7701 44.0312 95.6639 39.7598 98.439C35.8613 100.971 31.9062 95.8687 30.8301 100.538C26.248 95.3075 35.3027 91.3679 35.3027 91.3679C28.4707 89.6311 23.4277 97.62 23.4277 97.62C23.4277 97.62 20.5449 85.3424 31.5117 79.7373C39.7441 86.6184 50.5977 90.8066 62.5039 90.8066C74.4102 90.8066 85.2637 86.6184 93.4961 79.7373C104.461 85.3442 101.582 97.62 101.582 97.62C101.582 97.62 96.5312 89.6311 89.6992 91.3679ZM110.396 111.146C105.807 114.23 96.3574 106.156 101.291 106.156C104.189 106.156 105.713 108.516 105.713 106.561C105.713 104.337 114.982 108.062 110.396 111.146Z"
-                          fill="#FAC5FF"
-                        />
-                      </svg>
-                    </div>
-                    <div class="card-body">
-                      <h4 class="text-uppercase m-0">Clarity</h4>
-                      <hr class="my-4" />
-                      <div class="small">
-                        Your vision functions as our guide into the ether where
-                        we'll unlock your unique brand personality using
-                        numerology, astrology, and tarot. Together we'll
-                        discover who you are, who needs to know, and why they
-                        should care.
-                      </div>
-                    </div>
-                  </div>
-                </div>
+              <div class="col-12 col-md-4 px-4 mb-4">
+                <h3 class="mb-3">Creation</h3>
+                <p class="line-break m-0 w-100"></p>
+                <ul class="pl-2 pt-2">
+                  <li>Logo Design</li>
+                  <li>Custom Graphics</li>
+                  <li>Newsletter Templates</li>
+                  <li>Client-Converting Copy</li>
+                  <li>SEO Content</li>
+                </ul>
+              </div>
 
-                <div class="col-md-4 mb-3 mb-md-0">
-                  <div class="card px-4 h-100">
-                    <div class="card-body text-center">
-                      <h4>🎨</h4>
-                      <h4 class="text-uppercase m-0">
-                        Design
-                      </h4>
-                      <hr class="my-4" />
-                      <div class="small">
-                        All elements, symbols, typography, and colors are chosen
-                        intentionally to super-charge your brand's online
-                        vibration. We'll co-create a magnetic online presence
-                        that resonates with your authentic essence and attracts
-                        your ideal clientele.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-md-4 mb-3 mb-md-0">
-                  <div class="card px-4 h-100">
-                    <div class="card-body text-center">
-                      <h4>🔱</h4>
-                      <h4 class="text-uppercase m-0">Success</h4>
-                      <hr class="my-4" />
-                      <div class="small">
-                        Development of a fully functioning, scalable website,
-                        complete with opt-in forms, payments, security tools,
-                        with 3 months of post launch support, free!
-                      </div>
-                    </div>
-                  </div>
-                </div>
+              <div class="col-12 col-md-4 px-4 mb-4">
+                <h3 class="mb-3">Support</h3>
+                <p class="line-break m-0 w-100"></p>
+                <ul class="pl-2 pt-2">
+                  <li>Website Analytics</li>
+                  <li>Advertising and Marketing</li>
+                  <li>Competitor Analysis</li>
+                </ul>
               </div>
             </div>
-          </section>
-          <div class="block pt-1">
-            <p class="pb-4 text-center">
-              Go beyond with ETHER.
-            </p>
-            <div class="mb-4">
+            <div class="block pt-3 mb-3">
               <p class="text-center">
-                <a class="border-button" href="process.html">Our Process</a>
+                <a class="border-button" href="services.html">View Packages</a>
               </p>
             </div>
           </div>
-        </div>
-      </section>
-
-      <section>
-        <div class="parallax-two mb-4">
-          <h2>What We Offer</h2>
-        </div>
-        <div class="container p-0 pt-4">
-          <div class="row">
-            <div class="col-12 col-md-4 px-4 mb-4">
-              <h3 class="mb-3">Strategy</h3>
-              <p class="line-break m-0 w-100"></p>
-              <ul class="pl-2 pt-2">
-                <li>Brand Archetypes</li>
-                <li>Audience Personas</li>
-                <li>Competitor Analysis</li>
-                <li>Creative Direction</li>
-              </ul>
-            </div>
-
-            <div class="col-12 col-md-4 px-4 mb-4">
-              <h3 class="mb-3">Creation</h3>
-              <p class="line-break m-0 w-100"></p>
-              <ul class="pl-2 pt-2">
-                <li>Logo Design</li>
-                <li>Custom Graphics</li>
-                <li>Newsletter Templates</li>
-                <li>Client-Converting Copy</li>
-                <li>SEO Content</li>
-              </ul>
-            </div>
-
-            <div class="col-12 col-md-4 px-4 mb-4">
-              <h3 class="mb-3">Support</h3>
-              <p class="line-break m-0 w-100"></p>
-              <ul class="pl-2 pt-2">
-                <li>Website Analytics</li>
-                <li>Advertising and Marketing</li>
-                <li>Competitor Analysis</li>
-              </ul>
-            </div>
-          </div>
-          <div class="block pt-3 mb-3">
-            <p class="text-center">
-              <a class="border-button" href="services.html">View Packages</a>
-            </p>
-          </div>
-        </div>
-      </section>
+        </section>
+      </div>
 
       <section class="pt-4 text-light artist-meet pb-4">
         <div class="text-center container pt-2">
