--- a/index.html
+++ b/index.html
@@ -161,6 +161,120 @@
             </h3>
           </div>
         </section>
+        <section>
+          <div class="m-0">
+            <div class="block">
+              <p>
+                <span class="first-character ny">Y</span>ou need a creative
+                partner who can deeply connect with you and understand your
+                vision. We help you tune into your own mystical powers and the
+                soul essence of your business so we can inject that beauty
+                throughout your web design.
+              </p>
+            </div>
+          </div>
+        </section>
+        <!--SERVICES-->
+        <section class="contact-section bg-black mb-4">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4 mb-3 mb-md-0">
+                <div class="card px-4 h-100 text-center pt-3">
+                  <div class="card-icon">
+                    <svg
+                      width="75"
+                      height="70"
+                      viewBox="0 0 75 70"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M62.5031 60.4588C62.5031 56.7704 64.3324 50.3946 57.075 46.8121C62.2312 42.0865 65.4328 35.5118 65.4328 28.2355C65.4328 13.8489 52.9266 2.18579 37.5 2.18579C22.0723 2.18579 9.56719 13.8489 9.56719 28.2355C9.56719 35.5107 12.7676 42.0855 17.925 46.8132C10.6676 50.3946 12.4992 56.7704 12.4992 60.4588C12.4992 63.3003 7.03125 62.2413 7.03125 65.5746C7.03125 68.1188 10.7402 67.9647 12.2238 67.4499C15.7266 66.2314 17.9367 63.3112 18.6434 62.3779C19.2527 61.5692 18.8883 61.4348 19.1895 60.5506C19.4988 59.6424 21.3656 61.4632 23.8992 60.4588C27.5859 58.9976 25.1309 56.2108 27.859 56.2108C29.5113 56.2108 32.9953 57.5037 37.5023 57.5037C42.007 57.5037 45.4922 56.2108 47.1457 56.2108C49.8762 56.2108 47.4199 58.9976 51.1055 60.4588C53.6391 61.4632 55.507 59.6424 55.8176 60.5506C56.1176 61.4348 55.7508 61.5692 56.3602 62.3779C57.0656 63.3112 59.2734 66.2303 62.7785 67.4499C64.2609 67.9636 67.9688 68.1188 67.9688 65.5746C67.9688 62.2413 62.5031 63.3003 62.5031 60.4588ZM33.6844 25.2104C31.6453 25.2104 30.1957 27.4453 30.1957 29.9404C30.1957 27.4453 28.7496 25.2104 26.707 25.2104C28.7484 25.2104 30.1957 22.9766 30.1957 20.4805C30.1969 22.9766 31.6453 25.2104 33.6844 25.2104ZM23.9367 6.22177C23.9367 11.5364 27.0176 16.2893 31.3594 16.2893C27.0176 16.2893 23.9367 21.0455 23.9367 26.3601C23.9367 21.0455 20.8559 16.2893 16.5141 16.2893C20.8559 16.2904 23.9367 11.5364 23.9367 6.22177V6.22177ZM15.5848 29.9404C17.9367 29.9404 19.6055 27.3656 19.6055 24.4848C19.6055 27.3656 21.2754 29.9404 23.6285 29.9404C21.2754 29.9404 19.6055 32.5163 19.6055 35.396C19.6043 32.5163 17.9367 29.9404 15.5848 29.9404ZM8.76211 66.4445C6.01172 64.6008 11.5746 62.3735 11.5746 63.7025C11.5746 64.8707 12.4828 63.4598 14.2254 63.4598C17.182 63.4598 11.516 68.2871 8.76211 66.4445V66.4445ZM53.8195 54.6207C53.8195 54.6207 59.2559 56.9747 56.5066 60.1025C55.8609 57.3103 53.4879 60.3605 51.1488 58.8479C48.5848 57.1879 50.8582 53.6655 46.3816 54.8436C39.9199 56.5431 35.0812 56.5431 28.623 54.8436C24.1465 53.6655 26.4188 57.1889 23.8559 58.8479C21.5168 60.3616 19.1437 57.3113 18.498 60.1025C15.7488 56.9758 21.1816 54.6207 21.1816 54.6207C17.0824 53.5825 14.0566 58.3583 14.0566 58.3583C14.0566 58.3583 12.327 51.0186 18.907 47.6678C23.8465 51.7814 30.3586 54.2852 37.5023 54.2852C44.6461 54.2852 51.1582 51.7814 56.0977 47.6678C62.6766 51.0197 60.9492 58.3583 60.9492 58.3583C60.9492 58.3583 57.9187 53.5825 53.8195 54.6207ZM66.2379 66.4445C63.484 68.2882 57.8145 63.4609 60.7746 63.4609C62.5137 63.4609 63.4277 64.8718 63.4277 63.7036C63.4277 62.3735 68.9895 64.6008 66.2379 66.4445"
+                        fill="black"
+                      />
+                    </svg>
+                  </div>
+                  <div class="card-body">
+                    <h4 class="text-uppercase m-0">Clarity</h4>
+                    <hr class="my-4" />
+                    <div class="small">
+                      Your vision functions as our guide into the ether where
+                      we'll unlock your unique brand personality using
+                      numerology, astrology, and tarot. Together we'll discover
+                      who you are, who needs to know, and why they should care.
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4 mb-3 mb-md-0">
+                <div class="card px-4 h-100 text-center pt-3">
+                  <div class="card-icon">
+                    <svg
+                      width="70"
+                      height="70"
+                      viewBox="0 0 70 70"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M24.7461 2.1875C24.7461 19.5059 15.3869 35 2.1875 35C15.3869 35 24.7461 50.4952 24.7461 67.8125C24.7461 50.4952 34.1053 35 47.3047 35C34.1053 35 24.7461 19.5059 24.7461 2.1875Z"
+                        fill="black"
+                      />
+                      <path
+                        d="M51.4063 35C51.4063 43.6603 46.7283 51.4062 40.1264 51.4062C46.7283 51.4062 51.4063 59.1544 51.4063 67.8125C51.4063 59.1544 56.0842 51.4062 62.6861 51.4062C56.0842 51.4062 51.4063 43.6603 51.4063 35Z"
+                        fill="black"
+                      />
+                      <path
+                        d="M56.5337 2.1875C56.5337 10.8467 51.8558 18.5938 45.2539 18.5938C51.8547 18.5938 56.5337 26.3419 56.5337 35C56.5337 26.3419 61.2117 18.5938 67.8136 18.5938C61.2117 18.5938 56.5337 10.8467 56.5337 2.1875Z"
+                        fill="black"
+                      />
+                    </svg>
+                  </div>
+                  <div class="card-body text-center">
+                    <h4 class="text-uppercase m-0">
+                      Design
+                    </h4>
+                    <hr class="my-4" />
+                    <div class="small">
+                      All elements, symbols, typography, and colors are chosen
+                      intentionally to super-charge your brand's online
+                      vibration. We'll co-create a magnetic online presence that
+                      resonates with your authentic essence and attracts your
+                      ideal clientele.
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-4 mb-3 mb-md-0">
+                <div class="card px-4 h-100">
+                  <div class="card-body text-center">
+                    <h4>🔱</h4>
+                    <h4 class="text-uppercase m-0">Success</h4>
+                    <hr class="my-4" />
+                    <div class="small">
+                      Development of a fully functioning, scalable website,
+                      complete with opt-in forms, payments, security tools, with
+                      3 months of post launch support, free!
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="block pt-1">
+              <p class="pb-4 text-center">
+                Go beyond with ETHER.
+              </p>
+              <div class="mb-4">
+                <p class="text-center">
+                  <a class="border-button" href="process.html">Our Process</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
 
         <section class="services-section">
           <div class="parallax-two mb-4">
