--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       class="navbar navbar-expand-md navbar-light px-4 border-bottom sticky-top"
     >
       <!--  Show this only on mobile to medium screens  -->
-      <a class="navbar-brand d-md-none mt-2" href="#">ETHER EXPRESSIVE</a>
+      <a class="navbar-brand d-md-none mt-2" href="#">ESOETHER</a>
 
       <button
         class="navbar-toggler"
@@ -75,7 +75,7 @@
         </ul>
 
         <!--   Show this only lg screens and up   -->
-        <a class="navbar-brand d-none d-md-block" href="#">ETHER EXPRESSIVE</a>
+        <a class="navbar-brand d-none d-md-block" href="#">ESOETHER</a>
 
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -109,9 +109,9 @@
       <div class="container h-100">
         <div class="d-flex h-100 text-left align-items-center">
           <div class="w-100 text-white">
-            <h1 class="display-3" id="video-text">
-              <span class="smaller-lg">Dive into</span> <br />
-              The Ether
+            <h1 class="display-3 text-light" id="video-text">
+              <span class="smaller-lg">Welcome to the</span> <br />
+              Esoether
             </h1>
             <p class="lead mb-0 ml-2">
               Creating aligned online solutions with heart-centered purpose.
@@ -473,8 +473,8 @@
             </div>
             <div class="col-12 col-md-9">
               <div>
-                <h3 class=" text-light">Meet The Artist</h3>
-                <h1 class=" text-light"><strong>Noelle Horton</strong></h1>
+                <h3 class="text-light">Meet The Artist</h3>
+                <h1 class=" text-light smaller-lg"><strong>Noelle Horton</strong></h1>
                 <p class="text-left pt-3 px-4">
                   Noelle is a total techie with a passion for all things
                   metaphysical. She combines her visionary web design gifts and
