--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             <h2>What We Offer</h2>
           </div>
           <div class="container p-0 pt-4">
-            <div class="row">
+            <div class="row mx-2">
               <div class="col-12 col-md-4 px-4 mb-4">
                 <h3 class="mb-3">Strategy</h3>
                 <p class="line-break m-0 w-100"></p>
