--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         loop="loop"
       >
         <source
-          src="smoke2.mp4"
+          src="smoke2.webm"
           width="100vw"
           height="auto"
           poster="/poster.png"
