--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
     />
   </head>
   <body>
+    <!----------
+    -- NAVBAR --
+    ----------->
     <nav
       class="navbar navbar-expand-md navbar-light px-4 border-bottom sticky-top"
     >
-      <!--  Show this only on mobile to medium screens  -->
+      <!--LEFT NAV TEXT-->
       <a class="navbar-brand d-md-none mt-2" href="#">ESOETHER</a>
-
+      <!--NAV BUTTON-->
       <button
         class="navbar-toggler"
         type="button"
@@ -55,11 +58,12 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <!--  Use flexbox utility classes to change how the child elements are justified  -->
+      <!--NAVIGATION ITEMS-->
       <div
         class="collapse navbar-collapse justify-content-between"
         id="navbarToggle"
       >
+        <!--NAVBAR LEFT-->
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" href="#"
@@ -74,9 +78,10 @@
           </li>
         </ul>
 
-        <!--   Show this only lg screens and up   -->
+        <!--MIDDLE NAV TEXT-->
         <a class="navbar-brand d-none d-md-block" href="#">ESOETHER</a>
 
+        <!--NAVBAR RIGHT-->
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="#">Portfolio</a>
@@ -90,8 +95,14 @@
         </ul>
       </div>
     </nav>
-    <header class="overlay-effect video-effect">
+
+    <!----------------
+    -- VIDEO HEADER --
+    ----------------->
+    <header class="video-effect">
+      <!--OVERLAY-->
       <div class="overlay"></div>
+      <!--BACKGROUND VIDEO-->
       <video
         playsinline="playsinline"
         autoplay="autoplay"
@@ -106,13 +117,16 @@
           type="video/mp4"
         />
       </video>
+      <!--VIDEO TEXT-->
       <div class="container h-100">
         <div class="d-flex h-100 text-left align-items-center">
           <div class="w-100 text-white">
+            <!--VIDEO HEADER-->
             <h1 class="display-3 text-light" id="video-text">
               <span class="smaller-lg">Welcome to the</span> <br />
               Esoether
             </h1>
+            <!--VIDEO CAPTION-->
             <p class="lead mb-0 ml-2">
               Creating aligned online solutions with heart-centered purpose.
             </p>
@@ -122,7 +136,9 @@
     </header>
 
     <main>
-      <!--PARALLAX-->
+      <!--------------------
+      -- PARALLAX SECTION --
+      --------------------->
       <div id="parallax-world-of-ugg">
         <section class="intro-text-section">
           <div class="title pb-4">
