Change Intro snag

--- a/index.html
+++ b/index.html
@@ -140,28 +140,49 @@
       -- PARALLAX SECTION --
       --------------------->
       <div id="parallax-world-of-ugg">
-        <section class="intro-text-section">
-          <div class="title pb-4">
+        <section class="intro-text-section row m-0">
+          <div class="col-12 col-md-6 px-4 text-center my-auto w-100 h-100">
+            <img src="screen.jpg" class="witch-img">
+          </div>
+          <div class="col-12 col-md-6 mt-4 p-4 text-center mr-auto">
             <h3>We work online</h3>
             <h1>MAGIC</h1>
-            <div class="block pb-3">
-              <p class="text-left">
+            <p class="line-break mt-3 mb-3"></p>
+            <div class="pb-3">
+              <p class="px-4 text-left">
                 <span class="first-character ny">A</span>s a purpose-driven and
                 spiritually guided healer with a desire to change the world, you
                 deserve a website that reflects your powerful message.
               </p>
-              <p class="line-break mt-4"></p>
-              <p class="mt-4">
-                We specialize in helping gifted holistic, spiritual,
-                metaphysical entrepreneurs like you create gorgeous websites
-                that convey your authenticity and attract the clients you want
-                to work with.
+              <p class="mt-2 px-4 d-sm-block d-md-none d-lg-block">
+                <em
+                  >We specialize in helping gifted holistic, spiritual,
+                  metaphysical entrepreneurs like you create gorgeous websites
+                  that convey your authenticity and attract the clients you want
+                  to work with.
+                </em>
               </p>
               <div class="mt-4 pt-4 pb-3">
                 <p class="text-center">
-                  <a class="border-button" href="contact.html">Let's Connect</a>
+                  <a class="border-button" href="contact.html">Get In Touch</a>
                 </p>
               </div>
+            </div>
+          </div>
+
+
+          <div
+            class="row m-0 d-none d-md-block d-lg-none justify-content-center px-4 text-center"
+          >
+            <p class="col-12 mt-4">
+              We specialize in helping gifted holistic, spiritual, metaphysical
+              entrepreneurs like you create gorgeous websites that convey your
+              authenticity and attract the clients you want to work with.
+            </p>
+            <div class="mt-4 pt-4 pb-3">
+              <p class="text-center">
+                <a class="border-button" href="contact.html">Let's Connect</a>
+              </p>
             </div>
           </div>
         </section>
@@ -416,7 +437,7 @@
 
             <div class="block mt-2 mb-1 pb-4">
               <p class="pb-4 text-center">
-                Go beyond with ETHER.
+                <strong>Go beyond with ETHER.</strong>
               </p>
               <div class="mb-1">
                 <p class="text-center">
@@ -490,7 +511,9 @@
             <div class="col-12 col-md-9">
               <div>
                 <h3 class="text-light">Meet The Artist</h3>
-                <h1 class=" text-light smaller-lg"><strong>Noelle Horton</strong></h1>
+                <h1 class=" text-light smaller-lg">
+                  <strong>Noelle Horton</strong>
+                </h1>
                 <p class="text-left pt-3 px-4">
                   Noelle is a total techie with a passion for all things
                   metaphysical. She combines her visionary web design gifts and
