--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
       <!--TESTIMONIALS-->
       <div class="container testimonial-cont">
         <div class="row">
-          <div class="col-md-8 col-center m-auto">
+          <div class="col-md-8 col-center p-0 m-auto">
             <h2>Testimonials</h2>
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
               <!-- Carousel indicators -->
