--- a/index.html
+++ b/index.html
@@ -136,57 +136,69 @@
     </header>
 
     <main>
+      <!---------------
+        -- SNAG N HOOK --
+        ---------------->
+      <section class="snag-n-hook-container row m-0 text-center">
+        <!--IMAGE COLUMN-->
+        <div class="col-12 col-md-6 px-4 my-auto">
+          <img src="screen.jpg" class="witch-img" />
+        </div>
+        <!--TEXT COLUMN-->
+        <div class="col-12 col-md-6 mt-4 p-4">
+          <!--HEADER TEXT-->
+          <div class="snag">
+            <h3>We work online</h3>
+            <h1>MAGIC</h1>
+          </div>
+          <!--LINE BREAK-->
+          <p class="line-break mt-3 mb-3"></p>
+          <!--TAGLINE TEXT-->
+          <div class="hook">
+            <p class="text-left">
+              <span class="first-character ny">A</span>s a purpose-driven and
+              spiritually guided healer with a desire to change the world, you
+              deserve a website that reflects your powerful message.
+            </p>
+            <!--HIDDEN ON MEDIUM TEXT-->
+            <p class="mt-2 px-4 d-sm-block d-md-none d-lg-block">
+              <em
+                >We specialize in helping gifted holistic, spiritual,
+                metaphysical entrepreneurs like you create gorgeous websites
+                that convey your authenticity and attract the clients you want
+                to work with.
+              </em>
+            </p>
+            <!--CTA BUTTON-->
+            <div class="mt-4 pt-3 pb-3">
+              <p class="text-center">
+                <a class="border-button" href="contact.html">Get In Touch</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <!--UNHIDDEN ON MEDIUM TEXT-->
+        <div
+          class="row m-0 d-none d-md-block d-lg-none justify-content-center px-4 text-center"
+        >
+          <p class="col-12 mt-4">
+            We specialize in helping gifted holistic, spiritual, metaphysical
+            entrepreneurs like you create gorgeous websites that convey your
+            authenticity and attract the clients you want to work with.
+          </p>
+          <!--CTA BUTTON-->
+          <div class="mt-4 pt-4 pb-3">
+            <p class="text-center">
+              <a class="border-button" href="contact.html">Let's Connect</a>
+            </p>
+          </div>
+        </div>
+      </section>
+
       <!--------------------
       -- PARALLAX SECTION --
       --------------------->
       <div id="parallax-world-of-ugg">
-        <section class="intro-text-section row m-0">
-          <div class="col-12 col-md-6 px-4 text-center my-auto w-100 h-100">
-            <img src="screen.jpg" class="witch-img">
-          </div>
-          <div class="col-12 col-md-6 mt-4 p-4 text-center mr-auto">
-            <h3>We work online</h3>
-            <h1>MAGIC</h1>
-            <p class="line-break mt-3 mb-3"></p>
-            <div class="pb-3">
-              <p class="px-4 text-left">
-                <span class="first-character ny">A</span>s a purpose-driven and
-                spiritually guided healer with a desire to change the world, you
-                deserve a website that reflects your powerful message.
-              </p>
-              <p class="mt-2 px-4 d-sm-block d-md-none d-lg-block">
-                <em
-                  >We specialize in helping gifted holistic, spiritual,
-                  metaphysical entrepreneurs like you create gorgeous websites
-                  that convey your authenticity and attract the clients you want
-                  to work with.
-                </em>
-              </p>
-              <div class="mt-4 pt-4 pb-3">
-                <p class="text-center">
-                  <a class="border-button" href="contact.html">Get In Touch</a>
-                </p>
-              </div>
-            </div>
-          </div>
-
-
-          <div
-            class="row m-0 d-none d-md-block d-lg-none justify-content-center px-4 text-center"
-          >
-            <p class="col-12 mt-4">
-              We specialize in helping gifted holistic, spiritual, metaphysical
-              entrepreneurs like you create gorgeous websites that convey your
-              authenticity and attract the clients you want to work with.
-            </p>
-            <div class="mt-4 pt-4 pb-3">
-              <p class="text-center">
-                <a class="border-button" href="contact.html">Let's Connect</a>
-              </p>
-            </div>
-          </div>
-        </section>
-
         <section class="parallax-one px-4 dictionary-section">
           <div class="container">
             <h3 class="text-left text-light pb-2">
