--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!--NAVBAR LEFT-->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="#"
+            <a class="nav-link" href="#"
               >About <span class="sr-only">(current)</span></a
             >
           </li>
