--- a/index.html
+++ b/index.html
@@ -525,18 +525,18 @@
           <div class="m-0">
             <div class="row m-0">
               <div class="col-6 col-md-3 portfolio-item">
-                <img src="proj4.jpg" class="img-fluid" />
+                <img src="https://via.placeholder.com/500" class="img-fluid" />
               </div>
               <div class="col-4 col-md-3  portfolio-item">
-                <img src="proj3.jpg" class="img-fluid" />
+                <img src="https://via.placeholder.com/500" class="img-fluid" />
               </div>
 
               <div class="col-6 col-md-3  portfolio-item">
-                <img src="proj1.jpg" class="img-fluid" />
+                <img src="https://via.placeholder.com/500" class="img-fluid" />
               </div>
 
               <div class="col-6 col-md-3  portfolio-item">
-                <img src="proj2.jpg" class="img-fluid" />
+                <img src="https://via.placeholder.com/500" class="img-fluid" />
               </div>
               <div class="col-6 col-md-3  portfolio-item">
                 <img src="https://via.placeholder.com/500" class="img-fluid" />
