--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Esoether | Heart-Powered Websites</title>
+    <title>Esoether | Portfolio</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -66,12 +66,10 @@
         <!--NAVBAR LEFT-->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#"
-              >About <span class="sr-only">(current)</span></a
-            >
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Process</a>
@@ -95,7 +93,6 @@
         </ul>
       </div>
     </nav>
-
     <!----------
     -- HEADER --
     ----------->
@@ -107,45 +104,36 @@
     </header>
 
     <main>
-      <!----------------
-      -- HERO SECTION --
-      ----------------->
-      <section>
-        <div class="m-0">
-          <div class="line-break"></div>
-          <div class="block">
-            <p>
-              <span class="first-character ny">Y</span>ou need a creative
-              partner who can deeply connect with you and understand your
-              vision. We help you tune into your own mystical powers and the
-              soul essence of your business so we can inject that beauty
-              throughout your web design.
-            </p>
+      <!---------------------
+      -- PORTFOLIO SECTION --
+      ---------------------->
+      <div>
+        <section class="px-4">
+            <div class="line-break"></div>
+          <div class="container text-dark py-4 mb-2">
+            <h2>Services</h2>
+            <h3 class="text-center">
+              Discover what we offer:
+            </h3>
           </div>
-          <div class="line-break mt-0"></div>
-        </div>
-      </section>
+        </section>
+        <section class="services-section">
+          <div class="m-0">
+            <div class="row m-0">
+              <div class="col-md-4 portfolio-item">
+                <img src="https://via.placeholder.com/500" class="img-fluid" />
+              </div>
+              <div class="col-md-4  portfolio-item">
+                <img src="https://via.placeholder.com/500" class="img-fluid" />
+              </div>
 
-      <!--------------------
-      -- PARALLAX SECTION --
-      --------------------->
-      <section>
-        <div class="block">
-          <div class="row">
-            <div class="col-md-6 text-center text-md-right order-md-2">
-              <img
-                class="img-fluid"
-                src="https://i.pinimg.com/originals/e0/db/3e/e0db3eae47bf1e4cf42d7c5920c0d666.png"
-              />
-            </div>
-
-            <div class="col-md-6">
-              <p>Hi</p>
+              <div class="col-md-4  portfolio-item">
+                <img src="https://via.placeholder.com/500" class="img-fluid" />
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
   </body>
-  <footer></footer>
 </html>
