--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <a class="navbar-brand d-none d-none" href="#">ESOETHER</a>
 
         <!--NAVBAR RIGHT-->
-        <ul class="navbar-nav">
+        <ul class="navbar-nav navbar-right">
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
@@ -90,7 +90,7 @@
             <a class="nav-link" href="#">FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -112,17 +112,19 @@
       ----------------->
       <section>
         <div class="m-0">
-          <div class="line-break"></div>
-          <div class="block">
-            <p>
+          <div class="line-break mb-2"></div>
+          <div class="block text-center">
+            <p class="text-left pb-3">
               <span class="first-character ny">Y</span>ou need a creative
               partner who can deeply connect with you and understand your
               vision. We help you tune into your own mystical powers and the
               soul essence of your business so we can inject that beauty
               throughout your web design.
             </p>
+            <button class="border-button">Get a Free Quote</button>
           </div>
-          <div class="line-break mt-0"></div>
+
+          <!-- <div class="line-break mt-3"></div> -->
         </div>
       </section>
 
@@ -130,17 +132,30 @@
       -- PARALLAX SECTION --
       --------------------->
       <section>
-        <div class="block">
+        <div class="mt-md-4 block moon-block">
           <div class="row">
-            <div class="col-md-6 text-center text-md-right order-md-2">
+            <div
+              class="col-8 col-md-5 text-center text-md-right order-md-2 mx-auto"
+            >
               <img
                 class="img-fluid"
                 src="https://i.pinimg.com/originals/e0/db/3e/e0db3eae47bf1e4cf42d7c5920c0d666.png"
               />
             </div>
 
-            <div class="col-md-6">
-              <p>Hi</p>
+            <div class="col-md-7 mt-5 mt-md-0">
+              <p class="lead" style="line-height: 1;">
+                We approach web design as a <span style="font-family: 'Cookie', cursive; font-size: 2.5rem;">process</span> rather than a project.
+              </p>
+              <p>We work with:</p>
+              <ul>
+                <li>Spiritual Entrepreneurs</li>
+                <li>Tarot Readers</li>
+                <li>Astrologers</li>
+                <li>Holistic Businesses</li>
+              </ul>
+              <a class="yellow" href="about.html">Read more...</a>
+              
             </div>
           </div>
         </div>
