--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                 ><input type="email" name="_replyto" required="true" />
               </label>
               <label for="field3">
-                <span>Short Subject</span
+                <span>Services Needed</span
                 ><input type="text" name="field3" required="true" />
               </label>
               <label for="message">
@@ -150,9 +150,12 @@
                 padding: 30px 30px 15px 30px;
                 border: 5px solid #1D262F;
               }
+              .form-style-4 input[type=text] {
+                color: white;
+              }
+
               .form-style-4 input[type=submit],
               .form-style-4 input[type=button],
-              .form-style-4 input[type=text],
               .form-style-4 input[type=email],
               .form-style-4 textarea,
               .form-style-4 label
@@ -165,6 +168,10 @@
               .form-style-4 label {
                 display:block;
                 margin-bottom: 10px;
+                margin-top: 30px;
+              }
+              .form-style-4 label:first-child {
+                margin-top: 0;
               }
               .form-style-4 label > span{
                 display: inline-block;
