--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/ed4b5e3ec3.js"
+      crossorigin="anonymous"
+    ></script>
     <!--Bootstrap core JS-->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -128,34 +132,62 @@
         </div>
       </section>
 
+      <!-----------------
+      -- INTRO SECTION --
+      ------------------>
+      <section>
+        <div class="container-fluid bg-light">
+          <div class="mt-md-4 block moon-block">
+            <div class="row">
+              <div
+                class="col-8 col-md-5 text-center text-md-right order-md-2 mx-auto"
+              >
+                <img
+                  class="img-fluid"
+                  src="https://i.pinimg.com/originals/e0/db/3e/e0db3eae47bf1e4cf42d7c5920c0d666.png"
+                />
+              </div>
+
+              <div class="col-md-7 mt-5 mt-md-0">
+                <p class="lead" style="line-height: 1;">
+                  We approach web design as a
+                  <span
+                    style="font-family: 'Cookie', cursive; font-size: 2.5rem;"
+                    >process</span
+                  >
+                  rather than a project.
+                </p>
+                <p>We work with:</p>
+                <ul>
+                  <li>Spiritual Entrepreneurs</li>
+                  <li>Tarot Readers</li>
+                  <li>Astrologers</li>
+                  <li>Holistic Businesses</li>
+                </ul>
+                <a class="yellow" href="about.html">Read more...</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!--------------------
-      -- PARALLAX SECTION --
+      -- SERVICES SECTION --
       --------------------->
       <section>
-        <div class="mt-md-4 block moon-block">
-          <div class="row">
-            <div
-              class="col-8 col-md-5 text-center text-md-right order-md-2 mx-auto"
-            >
-              <img
-                class="img-fluid"
-                src="https://i.pinimg.com/originals/e0/db/3e/e0db3eae47bf1e4cf42d7c5920c0d666.png"
-              />
+        <div class="my-4 px-4">
+          <div class="row mx-0 text-center">
+            <div class="col-md-4 my-4">
+              <i class="fab fa-pagelines display-4 py-2"></i>
+              <h2>Clarity</h2>
             </div>
-
-            <div class="col-md-7 mt-5 mt-md-0">
-              <p class="lead" style="line-height: 1;">
-                We approach web design as a <span style="font-family: 'Cookie', cursive; font-size: 2.5rem;">process</span> rather than a project.
-              </p>
-              <p>We work with:</p>
-              <ul>
-                <li>Spiritual Entrepreneurs</li>
-                <li>Tarot Readers</li>
-                <li>Astrologers</li>
-                <li>Holistic Businesses</li>
-              </ul>
-              <a class="yellow" href="about.html">Read more...</a>
-              
+            <div class="col-md-4 my-4">
+              <i class="fas fa-moon display-4 py-2"></i>
+              <h2>Design</h2>
+            </div>
+            <div class="col-md-4 my-4">
+              <i class="fas fa-feather-alt display-4 py-2"></i>
+              <h2>Success</h2>
             </div>
           </div>
         </div>
