--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <section>
         <div class="m-0">
           <div class="line-break mb-2"></div>
-          <div class="block text-center">
+          <div class="block bg-light text-center">
             <p class="text-left pb-3">
               <span class="first-character ny">Y</span>ou need a creative
               partner who can deeply connect with you and understand your
