--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <section>
         <div class="m-0">
           <div class="line-break mb-2"></div>
-          <div class="block bg-light text-center">
+          <div class="block text-center">
             <p class="text-left pb-3">
               <span class="first-character ny">Y</span>ou need a creative
               partner who can deeply connect with you and understand your
@@ -137,7 +137,7 @@
       ------------------>
       <section>
         <div class="container-fluid bg-light">
-          <div class="mt-md-4 block moon-block">
+          <div class="mt-md-4 block moon-block bg-light">
             <div class="row">
               <div
                 class="col-8 col-md-5 text-center text-md-right order-md-2 mx-auto"
