--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               >
                 <img
                   class="img-fluid"
-                  src="https://i.pinimg.com/originals/e0/db/3e/e0db3eae47bf1e4cf42d7c5920c0d666.png"
+                  src="moon.png"
                 />
               </div>
 
@@ -157,7 +157,7 @@
                   >
                   rather than a project.
                 </p>
-                <p>We work with:</p>
+                <p>We specialize in helping:</p>
                 <ul>
                   <li>Spiritual Entrepreneurs</li>
                   <li>Tarot Readers</li>
