--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@
                 ></textarea>
               </label>
               <label>
-                <span> </span><input type="submit" value="Send Letter" />
+                <span> </span><input type="submit" value="Submit Inquiry" />
               </label>
             </form>
             <style type="text/css">
@@ -197,7 +197,7 @@
                 background: transparent;
                 outline: none;
                 border: none;
-                border-bottom: 1px dashed #83a4c5;
+                border-bottom: 1px dashed rgb(160, 131, 197);
                 width: 275px;
                 overflow: hidden;
                 resize: none;
