--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <header class="img-header">
       <!--OVERLAY-->
       <div class="header-img">
-        <img src="logo.jpg" style="max-width: 350px;" />
+        <img src="logo2.png" style="max-width: 350px;" />
       </div>
     </header>
 
@@ -142,10 +142,7 @@
               <div
                 class="col-8 col-md-5 text-center text-md-right order-md-2 mx-auto"
               >
-                <img
-                  class="img-fluid"
-                  src="moon.png"
-                />
+                <img class="img-fluid" src="moon.png" />
               </div>
 
               <div class="col-md-7 mt-5 mt-md-0">
@@ -178,15 +175,30 @@
         <div class="my-4 px-4">
           <div class="row mx-0 text-center">
             <div class="col-md-4 my-4">
-              <i class="fab fa-pagelines display-4 py-2"></i>
+              <i
+                class="fab fa-pagelines display-4 py-2"
+                style="background: -webkit-linear-gradient(#65ce24, #3c7a16);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;"
+              ></i>
               <h2>Clarity</h2>
             </div>
             <div class="col-md-4 my-4">
-              <i class="fas fa-moon display-4 py-2"></i>
+              <i
+                class="fas fa-moon display-4 py-2"
+                style="background: -webkit-linear-gradient(rgb(176, 80, 255), #9320fe);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;"
+              ></i>
               <h2>Design</h2>
             </div>
             <div class="col-md-4 my-4">
-              <i class="fas fa-feather-alt display-4 py-2"></i>
+              <i
+                class="fas fa-star display-4 py-2"
+                style="background: -webkit-linear-gradient(#ffd250, #feaa20);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;"
+              ></i>
               <h2>Success</h2>
             </div>
           </div>
