--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
           <div class="col-md-6 text-center">
             <!--OVERLAY-->
             <div class="text-center">
-              <img src="logo.jpg" style="max-width: 350px;" />
+              <img src="logo2.png" style="max-width: 350px;" />
             </div>
             <div class="contact-text">
               <a href="tel:619-500-2229">(619) 500-2229‬</a>
