--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
       href="https://fonts.googleapis.com/css?family=Cookie&display=swap"
       rel="stylesheet"
     />
+
+    <script id="mcjs">
+      !(function(c, h, i, m, p) {
+        (m = c.createElement(h)),
+          (p = c.getElementsByTagName(h)[0]),
+          (m.async = 1),
+          (m.src = i),
+          p.parentNode.insertBefore(m, p);
+      })(
+        document,
+        "script",
+        "https://chimpstatic.com/mcjs-connected/js/users/c9a59435f485966734a546679/9c1c166a3d70939a3e290b611.js"
+      );
+    </script>
   </head>
   <body>
     <!----------
@@ -182,6 +196,12 @@
               -webkit-text-fill-color: transparent;"
               ></i>
               <h2>Clarity</h2>
+              <p class="px-4 mx-4">
+                Your vision functions as our guide into the ether where we'll
+                unlock your unique brand personality using numerology,
+                astrology, and tarot. Together we'll discover who you are, who
+                needs to know, and why they should care.
+              </p>
             </div>
             <div class="col-md-4 my-4">
               <i
@@ -191,6 +211,12 @@
               -webkit-text-fill-color: transparent;"
               ></i>
               <h2>Design</h2>
+              <p class="px-4 mx-4">
+                All elements, symbols, typography, and colors are chosen
+                intentionally to super-charge your brand's online vibration.
+                We'll co-create a magnetic online presence that resonates with
+                your authentic essence and attracts your ideal clientele.
+              </p>
             </div>
             <div class="col-md-4 my-4">
               <i
@@ -200,6 +226,11 @@
               -webkit-text-fill-color: transparent;"
               ></i>
               <h2>Success</h2>
+              <p class="px-4 mx-4">
+                Development of a fully functioning, scalable website, complete
+                with opt-in forms, payments, security tools, with 3 months of
+                post launch support, free!
+              </p>
             </div>
           </div>
         </div>
