--- a/services.html
+++ b/services.html
@@ -99,7 +99,7 @@
     <header class="img-header">
       <!--OVERLAY-->
       <div class="header-img">
-        <img src="logo.jpg" style="max-width: 350px;" />
+        <img src="logo2.png" style="max-width: 350px;" />
       </div>
     </header>
 
