--- a/index.html
+++ b/index.html
@@ -227,9 +227,10 @@
               ></i>
               <h2>Success</h2>
               <p class="px-4 mx-4">
-                Development of a fully functioning, scalable website, complete
-                with opt-in forms, payments, security tools, with 3 months of
-                post launch support, free!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Cupiditate dolore animi quas minus labore consectetur, maiores
+                sequi exercitationem cumque quos voluptas, atque eum enim
+                architecto provident est. Et, cum reiciendis.
               </p>
             </div>
           </div>
