--- a/client-questionairre.html
+++ b/client-questionairre.html
@@ -69,7 +69,7 @@
       -- HERO SECTION --
       ----------------->
       <section>
-        <div class="m-0">
+        <div class="m-0 mt-4 pt-1">
           <div class="line-break my-2"></div>
           <div class="block text-center pt-4">
             <form
