--- a/client-questionairre.html
+++ b/client-questionairre.html
@@ -205,7 +205,7 @@
               </label>
               
               <label>
-                <input class="border-button" type="submit" value="Submit Inquiry" />
+                <input class="border-button" type="submit" value="Submit Form" />
               </label>
             </form>
           </div>
