--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
             <!--OVERLAY-->
             <form
               class="form-style-4"
-              action="https://formspree.io/myyzrqwg"
+              action="https://formspree.io/xoqjadkr"
               method="POST"
             >
               <label for="name">
