--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
     </nav>
 
     <main>
-      <div class="container">
+      <div class="container mt-4 pt-md-4">
         <div class="row">
           <!--------
       -- LEFT --
@@ -105,7 +105,7 @@
             <div class="text-center">
               <img src="logo2.png" style="max-width: 350px;" />
             </div>
-            <div class="contact-text">
+            <div class="contact-text my-2 pb-2">
               <a href="tel:619-500-2229">(619) 500-2229‬</a>
               <br />
               <a href="mailto:support@esoether.com">support@esoether.com</a>
@@ -115,7 +115,7 @@
           <!--------
       -- RIGHT --
       --------->
-          <div class="img-header col-md-6">
+          <div class="col-md-6">
             <!--OVERLAY-->
             <form
               class="form-style-4"
@@ -148,7 +148,6 @@
             </form>
             <style type="text/css">
               .form-style-4 {
-                width: 450px;
                 font-size: 16px;
                 background: #404040;
                 padding: 30px 30px 15px 30px;
