--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
             <style type="text/css">
               .form-style-4 {
                 font-size: 16px;
-                background: #404040;
+                background: #3D3D3D;
                 padding: 30px 30px 15px 30px;
                 border: 5px solid #1d262f;
               }
